--- a/package.json
+++ b/package.json
@@ -1,63 +1,38 @@
 {
-  "name": "nestjs-demo",
-  "version": "1.0.0",
-  "description": "A demo project for NestJS",
-  "repository": "git@github.com:miZyind/nestjs-demo.git",
-  "author": "miZyind <mizyind.dev>",
-  "license": "MIT",
-  "scripts": {
-    "prepare": "husky",
-    "clean": "rm -rf dist",
-    "dev": "nest start --path tsconfig.json --watch",
-    "lint": "eslint src --max-warnings 0",
-    "build": "nest build --path tsconfig.json",
-    "start": "node dist/main.js",
-    "typeorm": "typeorm-ts-node-commonjs -d src/db.ts",
-    "typeorm:generate": "typeorm-ts-node-commonjs migration:generate -d src/db.ts"
-  },
-  "engines": {
-    "node": ">=20",
-    "yarn": "1.22.22"
-  },
-  "packageManager": "yarn@1.22.22",
+  "name": "counter-game",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@nestjs/common": "^10.4.11",
-    "@nestjs/core": "^10.4.11",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/microservices": "^10.4.11",
-    "@nestjs/platform-express": "^10.4.11",
-    "@nestjs/schedule": "^4.1.1",
-    "@nestjs/typeorm": "^10.0.2",
-    "amqp-connection-manager": "^4.1.14",
-    "amqplib": "^0.10.5",
-    "bcrypt": "^5.1.1",
-    "mysql2": "^3.11.4",
-    "nestjs-xion": "^7.1.2",
-    "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@commitlint/cli": "^19.6.0",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@nestjs/cli": "^10.4.8",
-    "@types/amqplib": "^0.10.5",
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^22.10.0",
-    "@types/passport-jwt": "^4.0.1",
-    "eslint-plugin-mizyind": "^6.0.10",
-    "husky": "^9.1.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "prettier": {
-    "singleQuote": true,
-    "trailingComma": "all"
-  },
-  "commitlint": {
+  "eslintConfig": {
     "extends": [
-      "@commitlint/config-conventional"
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
